# input-stream

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  appveyor.yml  build_script.py  rustfmt.toml
benches/: large-input.rs
src/: lib.rs
test/: numbers
