[package]
name = "input-stream"
version = "0.2.0"
authors = ["Adrian Budau <budau.adi@gmail.com>"]
documentation = "https://docs.rs/input-stream"
repository = "https://github.com/adrian-budau/input-stream.git"
license = "MIT"
readme = "README.md"
description = "IO streams similar to C++'s streams"
keywords = ["stream", "parsing", "io"]
categories = ["parsing"]

[badges]
travis-ci = { repoistory = "adrian-budau/input-stream" }

[dependencies]
error-chain = "0.7.1"
clippy = {version = "0.0.*", optional = true}

[dev-dependencies]
rand = "0.*"

[features]
default = []
