[package]
name = "input-stream"
version = "0.4.0"
authors = ["Adrian Budau <budau.adi@gmail.com>"]
documentation = "https://docs.rs/input-stream"
repository = "https://gitlab.com/adrian.budau/input-stream"
license = "MIT"
readme = "README.md"
description = "IO streams similar to C++'s streams"
keywords = ["stream", "parsing", "io"]
categories = ["parsing"]
edition = "2018"

[badges]
travis-ci = { repository = "adrian-budau/input-stream" }

[dependencies]

[dev-dependencies]
rand = "0.6.5"

[features]
default = []
